--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -21,4 +21,8 @@ jobs:
         run: |
           pip install pytest pytest-cov
           pytest tests.py 
+      - name: Run Terraform
+        run: |
+          terraform plan
+          terraform apply
 
