--- a/.github/workflows/terraform_plan.yml
+++ b/.github/workflows/terraform_plan.yml
@@ -6,7 +6,7 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "Lambda_Terraform"
+  TF_WORKSPACE: "Lambda-Terraform"
   CONFIG_DIRECTORY: "./"
 jobs:
   terraform-plan:
@@ -17,15 +17,18 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+
     - name: Checkout
       uses: actions/checkout@v3
+
     - name: Upload Configuration
       uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
       id: plan-upload
       with: 
-        workspace: ${{env.TF_WORKSPACE}}
+        workspace: ${{ env.TF_WORKSPACE }}
         directory: ${{ env.CONFIG_DIRECTORY}}
         speculative: true
+
     - name: Create Plan Run
       uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
       id: plan-run
@@ -33,6 +36,7 @@ jobs:
         workspace: ${{ env.TF_WORKSPACE }}
         configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id}}
         plan_only: true
+
     - name: Get Plan Output
       uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
       id: plan-output
