--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -1,8 +1,10 @@
-name: "Terraform plan"
+name: "Terraform Apply"
+
 on:
-  push:
-    branches:
-      - dev
+  workflow_run:
+    workflows: ["Terraform Plan"]
+    types:
+      - completed
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
