--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -2,7 +2,8 @@ name: "Terraform Apply"
 
 on:
   workflow_run:
-    workflows: ["Terraform Plan"]
+    workflows: 
+      - Terraform Plan
     types:
       - completed
 env:
