--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -2,8 +2,7 @@ name: Terraform Apply
 run-name: Terraform Apply
 on:
   workflow_run:
-    workflows: 
-      - Terraform Plan
+    workflows: [Terraform Plan]
     types:
       - completed
 env:
