--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -1,16 +1,17 @@
 name: Terraform Apply
 run-name: Terraform Apply
+
 on:
   workflow_run:
-    workflows: 
-      - Terraform Plan
-    types:
-      - completed
+    workflows: [Terraform Plan]
+    types: [completed]
+
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "Lambda-Terraform"
   CONFIG_DIRECTORY: "./"
+
 jobs:
   terraform-apply:
     if: github.repository != 'hashicorp-education/terraform-github-actions'
