--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -2,9 +2,10 @@ name: Terraform Apply
 run-name: Terraform Apply
 
 on:
-  workflow_run:
-    workflows: [Terraform Plan]
-    types: [completed]
+  push:
+    branches:
+      - dev
+
 
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
