Modify terraform_apply.yml and terraform_plan.yml test if terraform_apply works

--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -5,7 +5,10 @@ on:
   push:
     branches:
       - dev
-
+  workflow_run:
+    workflows: [Terraform Plan]
+    types: [completed]
+    branches: [dev]
 
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
