Modify terraform_apply.yml and terraform_plan.yml test if terraform_apply works

--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -14,7 +14,7 @@ env:
   CONFIG_DIRECTORY: "./"
 
 jobs:
-  terraform-apply:
+  on-success:
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     permissions:
