Modify terraform_apply.yml and terraform_plan.yml test if terraform_apply works

--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -14,8 +14,7 @@ env:
   CONFIG_DIRECTORY: "./"
 
 jobs:
-  on-success:
-    name: "Terraform Apply"
+  terraform-apply:
     runs-on: ubuntu-latest
     permissions:
       contents: read
