Modify terraform_apply.yml and terraform_plan.yml test if terraform_apply works

--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -3,9 +3,9 @@ run-name: Terraform Apply
 
 on:
   workflow_run:
-    workflows: [Terraform Plan]
-    types: [completed]
-    branches: [dev]
+    workflows: [Terraform Plan]  
+    types:
+      - completed
 
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
