--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -3,7 +3,8 @@ run-name: Terraform Apply
 
 on:
   workflow_run:
-    workflows: [Terraform Plan]  
+    workflows: 
+      - Terraform Plan
     types:
       - completed
 
