Modify terraform_apply.yml and terraform_plan.yml test if terraform_apply works

--- a/.github/workflows/terraform_plan.yml
+++ b/.github/workflows/terraform_plan.yml
@@ -4,7 +4,7 @@ run-name: Terraform Plan
 on:
   workflow_run:
     workflows:
-      - Deploying and testing Lambda
+      - Test
     types:
       - completed
 
