--- a/.github/workflows/terraform_plan.yml
+++ b/.github/workflows/terraform_plan.yml
@@ -2,11 +2,10 @@ name: Terraform Plan
 run-name: Terraform Plan
 
 on:
-  workflow_run:
-    workflows:
-      - Test
-    types:
-      - completed
+  push:
+    branches:
+      - dev
+      - prod
 
 env:
   TF_CLOUD_ORGANIZATION: "OrioCookie"
