--- a/.github/workflows/terraform_apply.yml
+++ b/.github/workflows/terraform_apply.yml
@@ -4,7 +4,7 @@ run-name: Terraform Apply
 on:
   workflow_run:
     workflows: 
-      - Terraform Plan
+      - "Terraform Plan"
     types:
       - completed
 
